--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="" /sample5/step1">sample5-1(DB:UPDATE,DELETE)(認証付き)</a>
+  <a href="/sample5/step1">sample5-1(DB:UPDATE,DELETE)(認証付き)</a>
 </body>
 
 </html>
