--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
   <a href="/sample56-1.html">sample56-1.html(SSE 数字のpush)</a><br>
   <a href="/sample56-2.html">sample56-2.html(sendPeach)</a><br>
   <a href="/sample5/step7">sample5-7(DB&SSE)(認証付き)</a><br>
+  <a href="/sample58/step1">sample5-8(SSE発展編)</a><br>
 </body>
 
 </html>
